--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>みぞれの自己紹介</title>
     </head>
     <body>
         <h1>みぞれの自己紹介</h1>
         <div>
             <h2>基本情報</h2>
-            <img src="./icon.png" alt="アイコン">
+            <img src="./icon.png" alt="アイコン" id="icon">
             <ul>
                 <li>名前: 夏乃みぞれ</li>
                 <li>所属: デジタル創作同好会traP</li>
