--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
         <p>
             はじめまして、みぞれと申します。初心者ですが、頑張っていきたいと思います！よろしくお願いします！
         </p>
+        <p>
+            <a href="./works/index.html">作品一覧</a>
+        </p>
     </body>
 </html>
