--- a/works/counter.html
+++ b/works/counter.html
@@ -8,6 +8,6 @@
 <body>
     <h1>カウンター</h1>
     <div id="count">回数: 0</div>
-    <button onclick="countup()">クリック！</button>
+    <button onclick="countUp()">クリック！</button>
 </body>
 </html>
