--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="./icon.png" alt="アイコン" id="icon">
             <ul>
                 <li>名前: 夏乃みぞれ</li>
-                <li>所属: デジタル創作同好会traP</li>
+                <li>所属: デジタル創作同好会traP、サイクリング部ツーリング班</li>
                 <li>好きなもの: ゲーム、アニメ、漫画、小説、<strong>百合</strong>
                 </li>
             </ul>
