--- a/works/counter.html
+++ b/works/counter.html
@@ -8,6 +8,7 @@
     <body>
         <h1>カウンター</h1>
         <div id="count">回数: 0</div>
-        <button onclick="countUp()">クリック！</button>
+        <button onclick="countUp()">up!</button>
+        <button onclick="reset()">down!</button>
     </body>
 </html>
